feat: 위시리스트 최대 등록 개수 제한 및 API 요청 횟수 변경, 등록 작품 화면 표시 생략 처리
공통:
- .gitignore 에 gz 파일 추가

백엔드:
1. 위시리스트
- 최대 등록 개수 제한
- API 요청 횟수 변경(10 → 30)

프론트엔드:
1. 위시리스트
- 등록 작품 화면 표시 생략 처리 UI/UX 개선
